<?xml version="1.0"?>
<package format="2">
<!--<package> -->
	<name>nav_pioneer</name>
	<version>2.0.0</version>
	<description>
This package contains launch files for using the ROS navigation stack with the Pioneer mobile robot units owned by the Mobile Robotics Lab, at Institute of Systems and Robotics - University of Coimbra.
	</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
	<maintainer email="rprocha@isr.uc.pt">Rui P. Rocha</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
 	<license>LGPLv3</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/random_walk</url> -->

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
 	<author>David Portugal</author>
 	<author>Rui P. Rocha</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
	<buildtool_depend>catkin</buildtool_depend>
	<depend>move_base</depend>
	<depend>rosaria</depend>
	<depend>teleop_pioneer</depend>
	<depend>urg_node</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>

